--- a/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
@@ -22,5 +22,11 @@
   "The authentication allows users to sign in via username or email.": "이 인증 방식을 사용하면 사용자가 사용자 이름 또는 이메일로 로그인할 수 있습니다.",
   "No authentication methods available.": "사용 가능한 인증 방법이 없습니다.",
   "The password is inconsistent, please re-enter": "비밀번호가 일치하지 않습니다. 다시 입력하세요.",
-  "Sign-in": "로그인"  
+  "Sign-in": "로그인",
+  "Email channel not found": "이메일 채널을 찾을 수 없습니다",
+  "Notification manager plugin not found": "알림 관리자 플러그인을 찾을 수 없습니다",
+  "Not allowed to reset password": "비밀번호 재설정이 허용되지 않습니다",
+  "Token expired": "토큰이 만료되었습니다",
+  "User not found": "사용자를 찾을 수 없습니다",
+  "Please enter a password": "비밀번호를 입력하세요"
 }
