--- a/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
@@ -22,5 +22,6 @@
   "Temperature description": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.",
   "Top P description": "An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top_p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered.",
   "Get models list failed, you can enter a model name manually.": "Get models list failed, you can enter a model name manually.",
-  "Default greeting message": "Hi, I am {{ nickname }}"
+  "Default greeting message": "Hi, I am {{ nickname }}",
+  "Chat error warning": "Failed to send message. Please contact the administrator or try again later."
 }
