--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -782,5 +782,8 @@
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Depois de ocultar, esta guia não aparecerá mais na barra de guias. Para mostrá-la novamente, você precisa ir à página de gerenciamento de rotas para configurá-la.",
   "Deprecated": "Descontinuado",
   "The following old template features have been deprecated and will be removed in next version.": "As seguintes funcionalidades de modelo antigo foram descontinuadas e serão removidas na próxima versão.",
-  "Full permissions": "Todas as permissões"
+  "Full permissions": "Todas as permissões",
+  "Refresh data blocks": "Atualizar blocos de dados",
+  "Select data blocks to refresh": "Selecionar blocos de dados para atualizar",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Após a atualização em massa bem sucedida."
 }
