--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -167,6 +167,8 @@
   "Year": "年",
   "QuarterYear": "季度",
   "Select grouping field": "选择分组字段",
+  "Refresh data blocks": "刷新数据区块",
+  "Select data blocks to refresh": "选择要刷新的数据区块",
   "Media": "多媒体",
   "Markdown": "Markdown",
   "Wysiwyg": "富文本",
@@ -1097,5 +1099,6 @@
   "Font Style": "字体样式",
   "Italic": "斜体",
   "Response record":"响应结果记录",
-  "Colon":"冒号"
+  "Colon":"冒号",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功后，会自动刷新这里选中的数据区块。"
 }
