--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -801,5 +801,7 @@
   "If selected, the page will display Tab pages.": "Si se selecciona, la página mostrará páginas de pestañas.",
   "If selected, the route will be displayed in the menu.": "Si se selecciona, la ruta se mostrará en el menú.",
   "Are you sure you want to hide this tab?": "¿Estás seguro de que quieres ocultar esta pestaña?",
-  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Después de ocultar, esta pestaña ya no aparecerá en la barra de pestañas. Para mostrarla de nuevo, deberás ir a la página de gestión de rutas para configurarla."
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Después de ocultar, esta pestaña ya no aparecerá en la barra de pestañas. Para mostrarla de nuevo, deberás ir a la página de gestión de rutas para configurarla.",
+  "No pages yet, please configure first": "Aún no hay páginas, por favor configura primero",
+  "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Haga clic en el icono \"Editor de UI\" en la esquina superior derecha para entrar en el modo de Editor de UI."
 }
