--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -821,5 +821,7 @@
   "If selected, the page will display Tab pages.": "Si sélectionné, la page affichera des onglets.",
   "If selected, the route will be displayed in the menu.": "Si sélectionné, la route sera affichée dans le menu.",
   "Are you sure you want to hide this tab?": "Êtes-vous sûr de vouloir masquer cet onglet ?",
-  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Après avoir masqué, cette tab ne sera plus affichée dans la barre de tab. Pour la montrer à nouveau, vous devez vous rendre sur la page de gestion des routes pour la configurer."
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Après avoir masqué, cette tab ne sera plus affichée dans la barre de tab. Pour la montrer à nouveau, vous devez vous rendre sur la page de gestion des routes pour la configurer.",
+  "No pages yet, please configure first": "Pas encore de pages, veuillez configurer d'abord",
+  "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Cliquez sur l'icône \"Éditeur d'interface utilisateur\" dans le coin supérieur droit pour entrer en mode Éditeur d'interface utilisateur"
 }
