--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -1039,5 +1039,7 @@
   "If selected, the page will display Tab pages.": "選択されている場合、ページはタブページを表示します。",
   "If selected, the route will be displayed in the menu.": "選択されている場合、ルートはメニューに表示されます。",
   "Are you sure you want to hide this tab?": "このタブを非表示にしますか？",
-  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "非表示にすると、このタブはタブバーに表示されなくなります。再表示するには、ルート管理ページで設定する必要があります。"
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "非表示にすると、このタブはタブバーに表示されなくなります。再表示するには、ルート管理ページで設定する必要があります。",
+  "No pages yet, please configure first": "まだページがありません。最初に設定してください",
+  "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "ユーザーインターフェースエディターモードに入るには、右上隅の「UIエディタ」アイコンをクリックしてください"
 }
