--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -778,5 +778,7 @@
   "If selected, the page will display Tab pages.": "Se selecionado, a página exibirá páginas de abas.",
   "If selected, the route will be displayed in the menu.": "Se selecionado, a rota será exibida no menu.",
   "Are you sure you want to hide this tab?": "Tem certeza de que deseja ocultar esta guia?",
-  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Depois de ocultar, esta guia não aparecerá mais na barra de guias. Para mostrá-la novamente, você precisa ir à página de gerenciamento de rotas para configurá-la."
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Depois de ocultar, esta guia não aparecerá mais na barra de guias. Para mostrá-la novamente, você precisa ir à página de gerenciamento de rotas para configurá-la.",
+  "No pages yet, please configure first": "Ainda não há páginas, por favor configure primeiro",
+  "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Cliquez sur l'icône \"Éditeur d'interface utilisateur\" dans le coin supérieur droit pour entrer en mode Éditeur d'interface utilisateur"
 }
