--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -607,5 +607,7 @@
   "If selected, the page will display Tab pages.": "Если выбран, страница будет отображать страницы с вкладками.",
   "If selected, the route will be displayed in the menu.": "Если выбран, маршрут будет отображаться в меню.",
   "Are you sure you want to hide this tab?": "Вы уверены, что хотите скрыть эту вкладку?",
-  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "После скрытия этой вкладки она больше не будет отображаться во вкладке. Чтобы снова отобразить ее, вам нужно будет перейти на страницу управления маршрутами, чтобы установить ее."
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "После скрытия этой вкладки она больше не будет отображаться во вкладке. Чтобы снова отобразить ее, вам нужно будет перейти на страницу управления маршрутами, чтобы установить ее.",
+  "No pages yet, please configure first": "Пока нет страниц, пожалуйста, настройте сначала",
+  "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Нажмите на значок \"Редактор пользовательского интерфейса\" в правом верхнем углу, чтобы войти в режим редактора пользовательского интерфейса"
 }
