feat: support automatic data block refresh (#6591)
* fix: update FilterContext to allow null parent value

* fix: refactor context usage from FilterContext to DataBlocksContext in FilterProvider and SchemaSettings

* feat: add highlight and unhighlight functionality for data blocks in SchemaSettings

* Revert "fix: refactor context usage from FilterContext to DataBlocksContext in FilterProvider and SchemaSettings"

This reverts commit a75c7002010785f1cfd2e78c4f5998d0194366bc.

* Revert "fix: update FilterContext to allow null parent value"

This reverts commit 6eb0b1989e20be8310f8dbce4e875e862123f2b3.

* feat: add AllDataBlocksProvider and integrate it into SchemaSettings and Page components

* feat: add BlocksSelector component and integrate data block refresh functionality in Action and SchemaSettings

* feat: optimize handleClick to use useMemo for better performance and refresh data blocks after onClick

* feat: add dialog visibility control in BlocksSelector for improved user experience

* fix: avoid error

* feat: add highlight and scroll tracking functionality for data blocks

* feat: add transition

* feat: add tootip

* fix: prevent closed dialog blocks from appearing in the BlocksSelector options

* fix: handle errors during block refresh to prevent crashes

* chore: fix build

* feat: add AllDataBlocksProvider to BlockTemplatePage and export from index

* feat: set width for AfterSuccess dialog to 700

* feat: wrap MobileRouter with AllDataBlocksProvider for improved data handling

* feat: export BlocksSelector component and integrate into AfterSuccess settings

* fix: ensure container visibility is managed correctly in highlightBlock and unhighlightBlock functions

* fix: remove unnecessary display property manipulation in highlightBlock and simplify unhighlightBlock logic

* chore: hide data refresh after sucess option from block template configure page

* fix: revert code format

---------

Co-authored-by: gchust <gchust@qq.com>

--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -827,5 +827,8 @@
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Cliquez sur l'icône \"Éditeur d'interface utilisateur\" dans le coin supérieur droit pour entrer en mode Éditeur d'interface utilisateur",
   "Deprecated": "Déprécié",
   "The following old template features have been deprecated and will be removed in next version.": "Les fonctionnalités des anciens modèles ont été dépréciées et seront supprimées dans la prochaine version.",
-  "Full permissions": "Tous les droits"
+  "Full permissions": "Tous les droits",
+  "Refresh data blocks": "Actualiser les blocs de données",
+  "Select data blocks to refresh": "Actualiser les blocs de données",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Après une soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés."
 }
