feat: add convert template block to page block action

--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
@@ -12,7 +12,9 @@
   "Mobile": "Mobile",
   "Current": "Current record",
   "Revert to template": "Revert to template",
+  "Convert to Normal Block": "Convert to Normal Block",
   "Are you sure you want to revert all changes from the template?": "Are you sure you want to revert all changes from the template?",
+  "Are you sure you want to convert this template block to a normal block?": "Are you sure you want to convert this template block to a normal block?",
   "Templates": "Templates",
   "Block templates": "Block templates",
   "Submit": "Submit",
@@ -22,6 +24,7 @@
   "Saved successfully": "Saved successfully",
   "Block template": "Block template",
   "Reset successfully": "Reset successfully",
+  "Converted successfully": "Converted successfully",
   "Delete successfully": "Delete successfully",
   "Template block settings": "Template block settings",
   "Filter": "Filter",
