feat: convert template block to normal block

--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
@@ -12,7 +12,7 @@
   "Mobile": "Mobile",
   "Current": "Current record",
   "Revert to template": "Revert to template",
-  "Convert to Normal Block": "Convert to Normal Block",
+  "Convert to normal block": "Convert to normal block",
   "Are you sure you want to revert all changes from the template?": "Are you sure you want to revert all changes from the template?",
   "Are you sure you want to convert this template block to a normal block?": "Are you sure you want to convert this template block to a normal block?",
   "Templates": "Templates",
