--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
@@ -12,7 +12,7 @@
   "Mobile": "移动端",
   "Current": "当前记录",
   "Revert to template": "恢复到模板",
-  "Convert to Normal Block": "转换成普通区块",
+  "Convert to normal block": "转换成普通区块",
   "Are you sure you want to revert all changes from the template?": "您确定要恢复所有对模板的更改吗？",
   "Are you sure you want to convert this template block to a normal block?": "您确定要将此模板区块转换为普通区块吗？",
   "Templates": "模板",
