--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -1100,5 +1100,6 @@
   "Italic": "斜体",
   "Response record":"响应结果记录",
   "Colon":"冒号",
-  "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功后，会自动刷新这里选中的数据区块。"
+  "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功后，会自动刷新这里选中的数据区块。",
+  "You currently manage plugins using your account password. This has now been updated to an license-based management system. Please refer to the relevant documentation.": "您目前使用账号密码管理插件，现已调整为授权管理模式。请查阅相关文档。"
 }
