--- a/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
@@ -28,5 +28,15 @@
   "Not allowed to reset password": "비밀번호 재설정이 허용되지 않습니다",
   "Token expired": "토큰이 만료되었습니다",
   "User not found": "사용자를 찾을 수 없습니다",
-  "Please enter a password": "비밀번호를 입력하세요"
+  "Please enter a password": "비밀번호를 입력하세요",
+  "Forgot password": "비밀번호를 잊으셨나요",
+  "Please enter your email": "이메일을 입력하세요",
+  "Reset password": "비밀번호 재설정",
+  "Back to login": "로그인으로 돌아가기",
+  "Send reset email": "리셋 이메일 보내기",
+  "Reset link has expired": "리셋 링크의 유효 기간이 만료되었습니다",
+  "Go to login": "로그인으로 가기",
+  "Please enter new password": "새 비밀번호를 입력하세요",
+  "Please enter the same password again": "같은 비밀번호를 다시 입력하세요",
+  "The passwords entered twice are inconsistent": "입력한 두 개의 비밀번호가 일치하지 않습니다"
 }
