--- a/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
@@ -1,38 +1,48 @@
 {
-    "Auth Type": "Authenticatietype",
-    "Authenticators": "Authenticators",
-    "Authentication": "Authenticatie",
-    "Sign in via email": "Inloggen via e-mail",
-    "Sign in via password": "Inloggen via wachtwoord",
-    "Not allowed to sign up": "Aanmelden is niet toegestaan",
-    "Allow to sign up": "Toestaan om je aan te melden",
-    "The username or email is incorrect, please re-enter": "De gebruikersnaam of e-mail is incorrect, probeer het opnieuw",
-    "The password is incorrect, please re-enter": "Het wachtwoord is incorrect, probeer het opnieuw",
-    "Not a valid cellphone number, please re-enter": "Geen geldig telefoonnummer, probeer opnieuw in te voeren",
-    "The phone number has been registered, please login directly": "Het telefoonnummer is al geregistreerd, log direct in",
-    "The phone number is not registered, please register first": "Het telefoonnummer is niet geregistreerd, registreer eerst",
-    "Please keep and enable at least one authenticator": "Houd minstens één authenticator ingeschakeld",
-    "Allow to sign in with": "Toestaan om in te loggen met",
-    "Please enter a valid username": "Voer een geldige gebruikersnaam in",
-    "Please enter a valid email": "Voer een geldig e-mailadres in",
-    "Please enter your username or email": "Voer je gebruikersnaam of e-mailadres in",
-    "Please enter a password": "Voer een wachtwoord in",
-    "Username/Email": "Gebruikersnaam/E-mail",
-    "Auth UID": "Auth UID",
-    "The authentication allows users to sign in via username or email.": "De authenticatie staat gebruikers toe in te loggen via gebruikersnaam of e-mail.",
-    "No authentication methods available.": "Geen authenticatiemethoden beschikbaar.",
-    "The password is inconsistent, please re-enter": "Het wachtwoord is inconsistent, probeer het opnieuw",
-    "Sign-in": "Inloggen",
-    "Password": "Wachtwoord",
-    "The username/email or password is incorrect, please re-enter": "De gebruikersnaam/e-mail of het wachtwoord is incorrect, probeer het opnieuw",
-    "Show": "Toon",
-    "Sign up settings": "Aanmeldinstellingen",
-    "Sign up form": "Aanmeldformulier",
-    "At least one of the username or email fields is required": "Ten minste één van de velden voor gebruikersnaam of e-mail is verplicht",
-    "Password is not allowed to be changed": "Wachtwoord mag niet worden gewijzigd",
-    "Email channel not found": "E-mailkanaal niet gevonden",
-    "Notification manager plugin not found": "Notificatiebeheer-plugin niet gevonden",
-    "Not allowed to reset password": "Wachtwoord resetten niet toegestaan",
-    "Token expired": "Token verlopen",
-    "User not found": "Gebruiker niet gevonden"
+  "Auth Type": "Authenticatietype",
+  "Authenticators": "Authenticators",
+  "Authentication": "Authenticatie",
+  "Sign in via email": "Inloggen via e-mail",
+  "Sign in via password": "Inloggen via wachtwoord",
+  "Not allowed to sign up": "Aanmelden is niet toegestaan",
+  "Allow to sign up": "Toestaan om je aan te melden",
+  "The username or email is incorrect, please re-enter": "De gebruikersnaam of e-mail is incorrect, probeer het opnieuw",
+  "The password is incorrect, please re-enter": "Het wachtwoord is incorrect, probeer het opnieuw",
+  "Not a valid cellphone number, please re-enter": "Geen geldig telefoonnummer, probeer opnieuw in te voeren",
+  "The phone number has been registered, please login directly": "Het telefoonnummer is al geregistreerd, log direct in",
+  "The phone number is not registered, please register first": "Het telefoonnummer is niet geregistreerd, registreer eerst",
+  "Please keep and enable at least one authenticator": "Houd minstens één authenticator ingeschakeld",
+  "Allow to sign in with": "Toestaan om in te loggen met",
+  "Please enter a valid username": "Voer een geldige gebruikersnaam in",
+  "Please enter a valid email": "Voer een geldig e-mailadres in",
+  "Please enter your username or email": "Voer je gebruikersnaam of e-mailadres in",
+  "Please enter a password": "Voer een wachtwoord in",
+  "Username/Email": "Gebruikersnaam/E-mail",
+  "Auth UID": "Auth UID",
+  "The authentication allows users to sign in via username or email.": "De authenticatie staat gebruikers toe in te loggen via gebruikersnaam of e-mail.",
+  "No authentication methods available.": "Geen authenticatiemethoden beschikbaar.",
+  "The password is inconsistent, please re-enter": "Het wachtwoord is inconsistent, probeer het opnieuw",
+  "Sign-in": "Inloggen",
+  "Password": "Wachtwoord",
+  "The username/email or password is incorrect, please re-enter": "De gebruikersnaam/e-mail of het wachtwoord is incorrect, probeer het opnieuw",
+  "Show": "Toon",
+  "Sign up settings": "Aanmeldinstellingen",
+  "Sign up form": "Aanmeldformulier",
+  "At least one of the username or email fields is required": "Ten minste één van de velden voor gebruikersnaam of e-mail is verplicht",
+  "Password is not allowed to be changed": "Wachtwoord mag niet worden gewijzigd",
+  "Email channel not found": "E-mailkanaal niet gevonden",
+  "Notification manager plugin not found": "Notificatiebeheer-plugin niet gevonden",
+  "Not allowed to reset password": "Wachtwoord resetten niet toegestaan",
+  "Token expired": "Token verlopen",
+  "User not found": "Gebruiker niet gevonden",
+  "Forgot password": "Wachtwoord vergeten",
+  "Please enter your email": "Voer je e-mailadres",
+  "Reset password": "Wachtwoord opnieuw instellen",
+  "Back to login": "Terug naar inloggen",
+  "Send reset email": "Stuur reset e-mail",
+  "Reset link has expired": "Resetlink is verlopen",
+  "Go to login": "Ga naar inloggen",
+  "Please enter new password": "Voer een nieuw wachtwoord in",
+  "Please enter the same password again": "Voer hetzelfde wachtwoord opnieuw in",
+  "The passwords entered twice are inconsistent": "De twee ingevoerde wachtwoorden zijn inconsistent"
 }
